Adapt to higher resolution screens and fix broken styles

--- a/frontend/src/components/password/password.css
+++ b/frontend/src/components/password/password.css
@@ -28,6 +28,6 @@ label {
     border: none;
     background: none;
     position: absolute;
-    right: 20px;
-    top: 10px;
+    right: 13px;
+    top: 12px;
 }
